[gd_scene load_steps=16 format=3 uid="uid://bihfbbiwyykfh"]

[ext_resource type="Script" uid="uid://cqlaabxbj3i3k" path="res://box.gd" id="1_bqn3j"]
[ext_resource type="Theme" uid="uid://dplwn4m0n2xu3" path="res://Assests/theme.tres" id="2_3n43a"]
[ext_resource type="PackedScene" uid="uid://c12jkcfetea6o" path="res://box_score.tscn" id="2_jjbh2"]
[ext_resource type="Script" uid="uid://c8mu61a77l310" path="res://Assests/ui_scaler.gd" id="3_jjbh2"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_bqn3j"]
load_path = "res://.godot/imported/spritesheet.png-a1c390f16a2e861eaae846923967ec5f.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_eod45"]
atlas = SubResource("CompressedTexture2D_bqn3j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3n43a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3d203"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wj1a8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjbh2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_amiuo"]

[sub_resource type="Animation" id="Animation_jjbh2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Opening/Score Container:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.386993, 222.45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Right Door:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Left Door:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Container/ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3n43a"]
resource_name = "open"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/Opening/Score Container:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.9),
"transitions": PackedFloat32Array(0.659754, 1),
"update": 0,
"values": [Vector2(-0.386993, 222.45), Vector2(-0.386993, 13.45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Container/Right Door:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [-1.5708, 0.523599]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Container/Left Door:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(0.4, 1),
"update": 0,
"values": [1.5708, -0.523599]
}

[sub_resource type="Animation" id="Animation_amiuo"]
resource_name = "tap"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Container/ColorRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1.93187, 1),
"update": 0,
"values": [Color(0.521569, 0.941176, 1, 0.45098), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjbh2"]
_data = {
&"RESET": SubResource("Animation_jjbh2"),
&"open": SubResource("Animation_3n43a"),
&"tap": SubResource("Animation_amiuo")
}

[node name="Box" type="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
offset_left = 130.387
offset_top = 324.55
offset_right = 330.387
offset_bottom = 441.55
script = ExtResource("1_bqn3j")

[node name="Container" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Opening" type="ColorRect" parent="Container"]
clip_children = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -278.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Score Container" type="ColorRect" parent="Container/Opening"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.386993
offset_top = 222.45
offset_right = -0.386993
offset_bottom = 222.45
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.180392, 0.313726, 1)

[node name="Bar Left" type="ColorRect" parent="Container/Opening/Score Container"]
modulate = Color(0.521569, 0.941176, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.972
offset_left = -0.386993
offset_top = 3.45001
offset_right = 3.61301
offset_bottom = 4.83401
grow_horizontal = 2
mouse_filter = 2

[node name="Bar Right" type="ColorRect" parent="Container/Opening/Score Container"]
modulate = Color(0.521569, 0.941176, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -228.0
offset_bottom = -5.0
grow_horizontal = 2
mouse_filter = 2

[node name="Bar Top" type="ColorRect" parent="Container/Opening/Score Container"]
modulate = Color(0.521569, 0.941176, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.026
offset_right = 190.8
offset_bottom = 5.0
grow_horizontal = 2
mouse_filter = 2

[node name="Tempers" type="MarginContainer" parent="Container/Opening/Score Container"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.0175439
anchor_right = 1.0
anchor_bottom = 1.00439
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 13
theme_override_constants/margin_bottom = 15
metadata/_edit_use_anchors_ = true

[node name="BoxScoreContainer" type="VBoxContainer" parent="Container/Opening/Score Container/Tempers"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BoxScoreWO" parent="Container/Opening/Score Container/Tempers/BoxScoreContainer" instance=ExtResource("2_jjbh2")]
layout_mode = 2
score_type = 0

[node name="BoxScoreFC" parent="Container/Opening/Score Container/Tempers/BoxScoreContainer" instance=ExtResource("2_jjbh2")]
modulate = Color(0.919115, 0.938408, 0.635672, 1)
layout_mode = 2
score_type = 1

[node name="BoxScoreDR" parent="Container/Opening/Score Container/Tempers/BoxScoreContainer" instance=ExtResource("2_jjbh2")]
layout_mode = 2
score_type = 2

[node name="BoxScoreMA" parent="Container/Opening/Score Container/Tempers/BoxScoreContainer" instance=ExtResource("2_jjbh2")]
layout_mode = 2
score_type = 3

[node name="Right Door" type="ColorRect" parent="Container"]
modulate = Color(0.521569, 0.941176, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.987
anchor_top = 0.822
anchor_right = 0.987
anchor_bottom = 0.822
offset_left = -3.49854
offset_top = -141.975
offset_right = 2.50146
offset_bottom = -41.9753
rotation = -1.5708
pivot_offset = Vector2(2.44382, 99.5674)

[node name="Left Door" type="ColorRect" parent="Container"]
modulate = Color(0.521569, 0.941176, 1, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.823
anchor_right = 0.019
anchor_bottom = 0.823
offset_left = -2.94011
offset_top = -141.94
offset_right = 3.05989
offset_bottom = -41.9396
rotation = 1.5708
pivot_offset = Vector2(3.61316, 99.6739)

[node name="ColorRect" type="ColorRect" parent="Container"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_top = 3.0
offset_right = 198.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(3.61316, 99.6739)
color = Color(0.521569, 0.941176, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="Container"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -133.333
offset_bottom = -36.0
scale = Vector2(3, 3)
theme_override_constants/margin_top = 1

[node name="LabelId" type="Label" parent="Container/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("2_3n43a")
theme_override_font_sizes/font_size = 15
text = "01"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="Container" parent="Container"]
modulate = Color(0.521569, 0.941176, 1, 1)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -133.333
offset_bottom = -37.3333
scale = Vector2(3, 3)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_jjbh2")

[node name="NinePatchRect" type="NinePatchRect" parent="Container/Border"]
layout_mode = 2
texture = SubResource("AtlasTexture_eod45")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Container"]
layout_mode = 2
offset_right = 200.0
offset_bottom = 117.0
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_3n43a")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_3d203")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wj1a8")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jjbh2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_amiuo")

[node name="Control" type="Control" parent="."]
modulate = Color(0.521569, 0.941176, 1, 1)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Border" type="Container" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("3_jjbh2")
content_scale = 3.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Border"]
layout_mode = 2
texture = SubResource("AtlasTexture_eod45")
region_rect = Rect2(0, 0, 16, 16)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
metadata/_edit_use_anchors_ = true

[node name="BoxProgress" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0892857
anchor_right = 0.975
anchor_bottom = 0.910714
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_3n43a")
value = 80.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="LabelPercentage" type="Label" parent="Control"]
layout_mode = 2
offset_left = 15.0
offset_top = 13.0
offset_right = 194.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("2_3n43a")
theme_override_colors/font_color = Color(0, 0.192157, 0.333333, 1)
theme_override_colors/font_outline_color = Color(0.517647, 0.933333, 0.992157, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
text = "100%"
vertical_alignment = 1

[node name="ButtonDebug" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 257.0
offset_top = -106.0
offset_right = 472.0
offset_bottom = -45.0
text = "Debug Add Score"

[node name="FlyContainer" type="ColorRect" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
anchor_left = -11.955
anchor_top = -48.1579
anchor_right = 12.935
anchor_bottom = -1.05263
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="FlyTarget" type="Control" parent="Control/FlyContainer"]
layout_mode = 1
anchor_left = 0.39
anchor_top = -0.764146
anchor_right = 0.59
anchor_bottom = -0.0623918
offset_left = 527.581
offset_top = 4753.18
offset_right = 527.581
offset_bottom = 4753.18
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jjbh2")
}
autoplay = "RESET"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Container/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Control/BoxProgress" to="." method="_on_box_progress_value_changed"]
[connection signal="pressed" from="Control/ButtonDebug" to="." method="_on_button_debug_pressed"]
